IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/22/14: IMOD_4-7-6
6/22/14: Allow robust alignmnet in Batchruntomo with patch tracking and
contours cut into pieces (In 4.7).

6/18/14: In eTomo - Tomogram Combination, fixed problems with validation and
handling missing tomograms (In 4.7).(Bug# 1803)

6/17/14: Added script Excludeviews for reversibly removing views from a tilt
series and saving them in another file.

6/17/14: Added option to Edmont for entering sections numbered from 1; made it
access piece list in .mdoc or HDF file; made it able to transfer metadata 
in .mdoc or HDF files from input to output.

6/17/14: Made Extracttilts able to output the metadata in an HDF file in
autodoc format.

6/17/14: In eTomo using the piece list file (when available) to open montaged
raw stacks in Reconstruction and Serial Sections (In 4.7).(Bug# 1801)

6/16/14: Remove 6/5/14 automatic use of .pl file, since it then uses it 
inappropriately on blended file.

6/6/14: Made Extractpieces and Extracttilts take information from an
associated .mdoc file automatically as a fallback and work with metadata in an
HDF file also; made Extracttilts able to extract the text strings for any
metadata in .modc or HDF file; made 3dmod able to take piece coordinates from
an HDF file.

6/6/14: Added script for copying header of MRC file.

6/5/14: Made 3dmod automatically get piece coordinates from a .pl file
with same root name as single image file entered.

6/5/14: Fixed Tomopitch so its output is parsable by eTomo for shift or
thickness more than 1000 (In 4.7).

6/3/14: Made 3dmod automatically look for piece coordinates in an associated
.mdoc file and eliminated -pm option, which was not in the man page (In 4.7).

5/26/14: IMOD_4-8-6
5/21/14: Stopped Makecomfile from giving error when run with a bead size of 0
(In 4.7).

5/14/14: Fixed transparent background when saving model montage (In 4.7). 
